# agentic-research

./: .gitignore  Cargo.toml  README.md  config.yaml
docs/: architecture.md  configuration.md  failure-modes.md  pipeline-contracts.md  pipeline-rewrite-todo.md  prompts.md
prompts/: research_academic.md  research_expert.md  research_general.md  revise.md  synthesize.md  triage.md  validate_bias.md  validate_claims.md  validate_completeness.md  validate_sources.md  verify.md
src/: agent.rs  config.rs  init.rs  main.rs  pipeline.rs  preflight.rs  progress.rs  queue.rs  roster.rs
